--- a/Navbar-Modal/style.css
+++ b/Navbar-Modal/style.css
@@ -446,24 +446,49 @@ body {
 
   .container .navbar .center #cancelBtn {
     display: block;
-    margin-top: 10px;
+    margin-top: 0px;
     margin-left: 5px;
     padding: 6px 12px;
     border: none;
-    border-radius: 5px;
+    position: relative;
+    left: -48px;
+    border-radius: 1px;
     font-size: 25px;
     cursor: pointer;
     transition: 0.3s;
-  }
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    -ms-border-radius: 1px;
+    -o-border-radius: 1px;
+}
 
   .container .navbar .center #cancelBtn:hover {
-    background-color: #fff;
-    transition: 0.3s;
-    background-color: #000;
-  }
+    /* background-color: ; */
+    transition: 0.5s;
+    /* background-color: #000; */
+   
+}
+
+.container .navbar .center #cancelBtn i{
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
 
   .container .navbar .center #cancelBtn:hover i {
     color: orange;
+    transition: 0.5s;
+    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
   }
 
   .container .navbar #navItem {
