--- a/Collapse/style.css
+++ b/Collapse/style.css
@@ -1,23 +1,23 @@
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body{
+html,
+body {
   width: 100%;
   height: 100%;
 }
 
-.collapse_sec{
+.collapse_sec {
   height: 100vh;
   width: 100%;
-  background-color:  #03001c;
+  background-color: #03001c;
 }
 
-
-.collapse_sec .container .box{
+.collapse_sec .container .box {
   height: 70vh;
   width: 100%;
   padding-top: 20px;
@@ -31,14 +31,14 @@ html, body{
   overflow: hidden;
 }
 
-.collapse_sec .container .box ul{
+.collapse_sec .container .box ul {
   list-style: none;
   display: flex;
   flex-direction: column;
   padding-left: 0;
 }
 
-.collapse_sec .container .box ul li{
+.collapse_sec .container .box ul li {
   color: #00fff6;
   padding: 10px 10px;
   width: 100%;
@@ -51,7 +51,7 @@ html, body{
   position: relative;
 }
 
-.collapse_sec .container .box ul li:hover{
+.collapse_sec .container .box ul li:hover {
   background-color: #00fff713;
   transition: 0.3s;
   -webkit-transition: 0.3s;
@@ -60,39 +60,35 @@ html, body{
   -o-transition: 0.3s;
 }
 
-
 /* ================ */
-#updateText{
+#updateText {
   display: block;
 }
 
-#contactTxt{
-  display: none;
-
-}
-
-#programText{
+#contactTxt {
   display: none;
 }
 
-#newsText{
+#programText {
   display: none;
 }
 
-.active{
+#newsText {
+  display: none;
+}
+
+.active {
   background-color: #00fff713;
-
 }
 
-.active::before{
-  content: '';
+.active::before {
+  content: "";
   height: 15%;
   width: 7px;
   background-color: #00fff6;
   position: absolute;
   left: -10px;
   top: 0;
-
   transform: translateY(15px);
   border-radius: 50%;
   animation: nmAn 1s linear 1;
@@ -108,12 +104,12 @@ html, body{
 }
 
 @keyframes nmAn {
-  
 }
 
-.animd{
+.animd {
   /*transform: translateX(-100px);
-  */transition: 0.5s;
+  */
+  transition: 0.5s;
   opacity: 1;
   animation: animate 0.5s linear 1;
   -webkit-animation: animate 0.5s linear 1;
@@ -124,12 +120,12 @@ html, body{
 }
 
 @keyframes animate {
-  0%{
+  0% {
     opacity: 0;
     transform: translateY(50px);
     -webkit-transform: translateY(50px);
     -moz-transform: translateY(50px);
     -ms-transform: translateY(50px);
     -o-transform: translateY(50px);
-}
+  }
 }
